# personal-website

./: .gitignore  .gitmodules  README.md  TODO.md  clean.sh  deploy.sh  package.yaml  pyproject.toml  stack.yaml  watch.sh
asciimath/: math.conf  package.yaml
asciimath/src/: AsciiMath.hs  Main.hs
content/: abstract.md  news.yaml  publications.yaml  software.md
content/cv/: awards.yaml  education.yaml  research.yaml  service.yaml  talks.yaml  teaching.yaml
content/fragments/: abstract.md  contact.md  footer.md  software.md
generator/: __main__.py  markdown_utils.py
provider/: .htaccess  .htpasswd  404.html  404.md  contact.md  cv.html  forbidden.html  forbidden.md  index.html  index.md  siteroot
provider/blog/: newton-leibniz.md  pick-at-least-one.md  prozone-analysis.md
provider/content/: abstract.md  awards.yaml  news.yaml  service.yaml  skills.md  software.md  talks.yaml
provider/css/: fonts.css  margins.scss  style.scss
provider/drafts/: .htaccess
provider/math/: default-macros.tex  default.conf  kappa-macros.tex  kappa.conf
provider/notes/: counterfactuals.md  influence-map.md  influences.md  kappa-in-celf.md  prozone-analysis.md  readings.md
provider/software/: katql-documentation.md
scripts/: diagrams.sh  kappa_pygment.py  katql_pygment.py
src/: Attached.hs  Blog.hs  Compilers.hs  Config.hs  Filters.hs  Main.hs  Page.hs  Utils.hs
templates/: abstract.html  base.html  dated-item.html  details.html  large-item.html  publication.html  publications-section.html
website/: 404.html  cv.html  index.html  publications.html
(+83 files in other folders)
